[project]
name = "ring-webrtc"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "systemd-python>=235",
    "aiohttp>=3.11.10",
    "ring-doorbell>=0.9.13",
]

[build-system]
requires = ["setuptools==75.1.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ring-webrtc = "ring_webrtc.__main__:main"
